--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 				<div class="col-lg-4 proc">
 					<i class="fa fa-circle-thin"></i>
 					<h3>Clases de Pilates</h3>
-					<p> para grupos o particulares.....</p>
+					<p> para grupos o particulares..... Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
 				</div>
 				<div class="col-lg-4 proc">
 					<i class="fa fa-circle-thin"></i>
@@ -216,7 +216,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-8-offset-2 centered">
-					<h1>Curriculum Vitae</h1>
+					<h1>CURRICULUM VITAE</h1>
 <!-- 					<h3>I'll do all the work for you</h3>
 					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p> -->
 				</div><!-- /col-lg-8 -->
