--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 			<div class="container" id="servicios">
 			<div class="row mt centered">
 				<h1>SERVICIOS</h1>
-					<h3>Clases grupos o particulares en la zona de Barcelona y la Cerdanya</h3>
+					<h3>Imparto clases a grupos o particulares <br/>en la zona de Barcelona y la Cerdanya</h3>
 				<div class="col-lg-4 proc">
 					<i class="fa fa-circle-thin"></i>
 					<h3>Clases de danza contemporánea</h3>
