--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 				</div><! --/col-lg-4-->
 				<div class="col-lg-8 name-desc">
-					<h2>PROFESORA DE PILATES,<br/>DANZA CONTEMPORANEA,<br/>ESTIRAMIENTOS Y BASE TÉCNICA POSTURAL</h2>
+					<h2>PROFESORA DE PILATES<br/>Y DANZA CONTEMPORANEA</h2>
 					<div class="name-zig"></div>
 
 					<div class="col-md-6">
