--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
 							<p>Entre la danza y el esquí alpino se encuentra el Pilates.</p>
 							<p>Soy bailarina y profesora de contemporáneo, profesora de Pilates mat y máquinas y profesora de esquí alpino.</p>
 							<p>Empecé con gimnasia rítmica a los seis años, tras diez compitiendo encontré una alternativa más saludable: la danza contemporánea, a la que he dedicado los últimos años colaborando en pequeñas compañías e impartiendo clases.</p>
-							<p>Paralelamente a la gimnasia me dedicaba al esquí alpino, compitiendo durante el mismo periodo de tiempo que en la gimnasia. Teniendo el grado medio de este deporte trabajo como profesora  en “la La Molina”.</p>
+							<p>Paralelamente a la gimnasia me dedicaba al esquí alpino, compitiendo durante el mismo periodo de tiempo que en la gimnasia. Teniendo el grado medio de este deporte trabajo como profesora  en la escuela Poliesportiva La Molina.</p>
 					</div>
 					<div class="col-md-6">
-							<p>Al dedicarme a dos deportes tan diferentes COMO  estos quise encontrar la manera de equilibrar mi cuerpo y no perder facultades para la práctica de ambos.</p><p>Fue entonces cuando entré en contactos con el Pilates y al creer en su efectividad y su eficiencia estudié con la Federación Española de Pilates el curso de Pilates Mat y Pilates máquinas convirtiéndome también en profesora de Pilates. Esta técnica es tan buena para deportistas como para quienes necesitan una mejor colocación postural o para aquellos que padecen dolores posturales e incluso lesiones.</p>
+							<p>Al dedicarme a dos deportes tan diferentes como estos quise encontrar la manera de equilibrar mi cuerpo y no perder facultades para la práctica de ambos.</p><p>Fue entonces cuando entré en contactos con el Pilates y al creer en su efectividad y su eficiencia estudié con la Federación Española de Pilates el curso de Pilates Mat y Pilates máquinas convirtiéndome también en profesora de Pilates. Esta técnica es tan buena para deportistas como para quienes necesitan una mejor colocación postural o para aquellos que padecen dolores posturales e incluso lesiones.</p>
 					</div>
 					
 				</div><! --/col-lg-8-->
@@ -101,13 +101,13 @@
 			<div class="row mt centered">
 				<h1>SERVICIOS</h1>
 					<h3>Imparto clases a grupos o particulares <br/>en la zona de Barcelona y la Cerdanya</h3>
-				<div class="col-lg-6 proc">
+				<div class="col-lg-offset-2 col-lg-4 proc">
 					<i class="fa fa-circle-thin"></i>
 					<h3>Clases de danza contemporánea</h3>
 					<p>Mis clases son para personas que tengan ganas de probar, de moverse y de conectar con su cuerpo y también para quienes ya tengan algunas nociones de baile. <br/>Cada sesión comienza con un calentamiento y termina con estiramientos.
 					</p>
 				</div>
-				<div class="col-lg-6 proc">
+				<div class="col-lg-4 proc">
 					<i class="fa fa-circle-thin"></i>
 					<h3>Clases de Pilates</h3>
 					<p>Las sesiones duran entre 45 y 60 minutos y se trabaja según lo que necesite cada persona, siendo importante que las clases grupales sean reducidas.</p>
