--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 				<div class="col-lg-offset-2 col-lg-4 proc">
 					<i class="fa fa-circle-thin"></i>
 					<h3>Clases de danza contemporánea</h3>
-					<p>Mis clases son para personas que tengan ganas de probar, de moverse y de conectar con su cuerpo y también para quienes ya tengan algunas nociones de baile. <br/>Cada sesión comienza con un calentamiento y termina con estiramientos.
+					<p>Mis clases son para personas que tengan ganas de probar, de moverse y de conectar con su cuerpo y también para quienes ya tengan algunas nociones de baile. Cada sesión comienza con un calentamiento y termina con estiramientos.
 					</p>
 				</div>
 				<div class="col-lg-4 proc">
