--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 			<div class="row mt centered">
 				<h1>SERVICIOS</h1>
 					<h3>Imparto clases a grupos o particulares <br/>en la zona de Barcelona y la Cerdanya</h3>
-				<div class="col-lg-offset-2 col-md-4 proc">
+				<div class="col-md-offset-2 col-md-4 proc">
 					<i class="fa fa-circle-thin"></i>
 					<h3>Clases de danza contemporánea</h3>
 					<p>Mis clases son para personas que tengan ganas de probar, de moverse y de conectar con su cuerpo y también para quienes ya tengan algunas nociones de baile. Cada sesión comienza con un calentamiento y termina con estiramientos.
