--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 	<div id="servicewrap">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-8-offset-2 centered">
+				<div class="col-md-8-offset-2 centered">
 					<h1>CURRICULUM VITAE</h1>
 <!-- 					<h3>I'll do all the work for you</h3>
 					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p> -->
@@ -218,34 +218,45 @@
 			</div><! --/row -->
 			
 			<div class="row mt">
-				<div class="col-lg-4 service">
+				<div class="col-md-offset-1 col-md-5 service">
 					<i class="fa fa-star"></i><p>Profesora de pilates por la Federación Española de Pilates</p>
-					<p class="text">Pilates Mat, Pilates máquinas.</p>
+					<p class="text">
+					<ul>
+					<li>Mat Pilates</li><li>Pilates máquinas</li></ul></p>
 				</div>
-				<div class="col-lg-4 service">
-					<i class="fa fa-star"></i><p>10 años gimnasia rítmica</p>
-					<!-- <p class="text">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer.</p> -->
+				<div class="col-md-5 service">
+					<i class="fa fa-star"></i><p>Formación en danza</p>
+					<p class="text">
+						<ul>
+						<li>10 años de gimnasia rítmica, siempre a nivel de competición.</li>
+						<li>Contemporáneo en centros como Area, Nunnart, Tragantdansa, etc. </li>
+						<li>He colaborado con pequeñas compañías e imparto clases.</li>
+						</ul>
+					</p>
 				</div>
-				<div class="col-lg-4 service">
-					<i class="fa fa-star"></i><p>7 años de esquí alpino de competición</p>
-<!-- 					<p class="text">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer.</p> -->
-				</div>
+				
 			</div><! --/row -->
 			<div class="row mt">
-				<div class="col-lg-4 service">
-					<i class="fa fa-star"></i><p>Grado medio TD2 en el CAR de Sant Cugat</p>
-<!-- 					<p class="text">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer.</p> -->
+				<div class="col-md-5 col-md-offset-1 service">
+					<i class="fa fa-star"></i><p>Esquí alpino</p>
+<p class="text">
+						<ul>
+						<li>7 años compitiendo</li>
+						<li>TD2 de esquí alpino con el CAR</li>
+						<li>Profesora de esquí en la Escuela Poliesportiva de La Molina</li>
+						</ul>
+						</p>
 				</div>
 
-				<div class="col-lg-4 service">
-					<i class="fa fa-star"></i><p>3 años de profesora de esquí alpino en la escuela Poliesportiva de La Molina</p>
-<!-- 					<p class="text">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer.</p> -->
+				<div class="col-md-5 service">
+					<i class="fa fa-star"></i><p>Diplomada en Educación Social en la Fundación Pere Tarrés</p>
+					<p class="text">
+						<ul><li>1 año de experiencia en el centro de justicia de menores Montilivi (Gerona) </li>
+						<li>3 en el CRAE Nazaret (Barcelona)</li></ul>
+						</p>
 				</div>
 
-				<div class="col-lg-4 service">
-					<i class="fa fa-star"></i><p>Diplomada en Educación Social por la Fundació Pere Tarrés</p>
-					<p class="text">1 año de experiencia en el centro de justicia de menores de Montilivi ( Gerona ), y 3 años en el centro de acogida Nazaret ( Barcelona ).</p>
-				</div>
+
 				
 			</div><! --/row -->
 			
@@ -299,6 +310,12 @@
           jQuery(".fancybox").fancybox();
       });
 	   </script>
+
+	   <style type="text/css">
+.service li{
+	color:#767676 !important;
+}
+	   </style>
 
   </body>
 </html>
