--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
 					<img class="img-responsive" src="assets/img/betty_0.jpg">
 					<p>BETTY FERNÁNDEZ</p>
 					<small>+34 609 941 316 <br/> bettyfernandezriverola@gmail.com</small>
-					<br/><br/>
+					<hr>
+					<small>Clases en Barcelona y La Cerdanya</small>
 
 				</div><! --/col-lg-4-->
 				<div class="col-lg-8 name-desc">
